[gd_scene load_steps=57 format=3 uid="uid://dv52k7en8figl"]

[ext_resource type="Texture2D" uid="uid://505rpy2ihkc2" path="res://assets/AnimationSheets/chest pixel art-Chest_Open_32x16.png" id="1_8rg16"]
[ext_resource type="Script" path="res://scripts/mystery_box.gd" id="1_xjrpf"]
[ext_resource type="Texture2D" uid="uid://5djkq33t5uc7" path="res://assets/AnimationSheets/Weaonns_Sprites_32x32/Pistol_Flicker.png" id="3_6moc4"]
[ext_resource type="Texture2D" uid="uid://8wuodr4dxr6v" path="res://assets/AnimationSheets/Weaonns_Sprites_32x32/Pump_Flicker.png" id="4_i1331"]
[ext_resource type="Texture2D" uid="uid://chrltplvh7p5p" path="res://assets/AnimationSheets/Weaonns_Sprites_32x32/Revolver_Flicker.png" id="4_vb7fy"]
[ext_resource type="Texture2D" uid="uid://n34dkq1psg1a" path="res://assets/AnimationSheets/Weaonns_Sprites_32x32/Rifle_Flicker.png" id="4_xfxkk"]
[ext_resource type="Texture2D" uid="uid://bgjpikl0e31a4" path="res://assets/AnimationSheets/Weaonns_Sprites_32x32/RocketLauncher_Flicker.png" id="5_gtquf"]
[ext_resource type="FontFile" uid="uid://cxdcn4rqspmli" path="res://assets/PressStart2P-Regular.ttf" id="8_yduc3"]
[ext_resource type="AudioStream" uid="uid://bh5q85nrq0uvh" path="res://assets/SFX & BGM/positive.mp3" id="9_8y8ls"]
[ext_resource type="AudioStream" uid="uid://cocm30hvcu3f3" path="res://assets/SFX & BGM/failed.wav" id="9_hb6ta"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3xrmr"]
atlas = ExtResource("1_8rg16")
region = Rect2(160, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t5e"]
atlas = ExtResource("1_8rg16")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pferj"]
atlas = ExtResource("1_8rg16")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpvp7"]
atlas = ExtResource("1_8rg16")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehymf"]
atlas = ExtResource("1_8rg16")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w75cu"]
atlas = ExtResource("1_8rg16")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nikyp"]
atlas = ExtResource("1_8rg16")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kwko"]
atlas = ExtResource("1_8rg16")
region = Rect2(0, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_35nfx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xrmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pferj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpvp7")
}],
"loop": false,
"name": &"closed",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpvp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehymf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pferj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w75cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xrmr")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nikyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kwko")
}],
"loop": true,
"name": &"randomizing",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gtgci"]
atlas = ExtResource("3_6moc4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e3pv"]
atlas = ExtResource("3_6moc4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62pxu"]
atlas = ExtResource("3_6moc4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir44r"]
atlas = ExtResource("3_6moc4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rymc"]
atlas = ExtResource("3_6moc4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0iko"]
atlas = ExtResource("3_6moc4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vytgt"]
atlas = ExtResource("3_6moc4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb06h"]
atlas = ExtResource("4_vb7fy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g11g7"]
atlas = ExtResource("4_vb7fy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf284"]
atlas = ExtResource("4_vb7fy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql0gn"]
atlas = ExtResource("4_vb7fy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1snve"]
atlas = ExtResource("4_vb7fy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0nku"]
atlas = ExtResource("4_vb7fy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_av0l5"]
atlas = ExtResource("4_vb7fy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqibi"]
atlas = ExtResource("5_gtquf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms5sy"]
atlas = ExtResource("5_gtquf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_heaqx"]
atlas = ExtResource("5_gtquf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gogka"]
atlas = ExtResource("5_gtquf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy8qt"]
atlas = ExtResource("5_gtquf")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s256a"]
atlas = ExtResource("5_gtquf")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74hkr"]
atlas = ExtResource("5_gtquf")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nkq0"]
atlas = ExtResource("4_i1331")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxheo"]
atlas = ExtResource("4_i1331")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_veln6"]
atlas = ExtResource("4_i1331")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prcdh"]
atlas = ExtResource("4_i1331")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq42u"]
atlas = ExtResource("4_i1331")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxltm"]
atlas = ExtResource("4_i1331")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2nb0"]
atlas = ExtResource("4_i1331")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y5el"]
atlas = ExtResource("4_xfxkk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx284"]
atlas = ExtResource("4_xfxkk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtdc4"]
atlas = ExtResource("4_xfxkk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p5dq"]
atlas = ExtResource("4_xfxkk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w060"]
atlas = ExtResource("4_xfxkk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrbd6"]
atlas = ExtResource("4_xfxkk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wjtn"]
atlas = ExtResource("4_xfxkk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l6jal"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtgci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e3pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62pxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir44r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rymc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0iko")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_vytgt")
}],
"loop": true,
"name": &"pistol",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb06h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g11g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf284")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql0gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1snve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0nku")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_av0l5")
}],
"loop": true,
"name": &"revolver",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqibi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms5sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heaqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gogka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy8qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s256a")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_74hkr")
}],
"loop": true,
"name": &"rocket_launcher",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxheo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veln6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prcdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq42u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxltm")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_h2nb0")
}],
"loop": true,
"name": &"shotgun",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y5el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx284")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtdc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p5dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w060")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrbd6")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_8wjtn")
}],
"loop": true,
"name": &"thompson",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjbop"]
size = Vector2(82, 67)

[node name="MysteryBox" type="Node2D"]
script = ExtResource("1_xjrpf")
randomize_duration = 6.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_35nfx")
animation = &"closed"
frame = 3
frame_progress = 1.0

[node name="RandomizingParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.5
emission_shape = 3
emission_rect_extents = Vector2(16, 8)
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_max = 2.0
color = Color(1, 0.8, 0.2, 1)

[node name="WeaponSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_l6jal")
animation = &"pistol"

[node name="AreaTrigger" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrigger"]
shape = SubResource("RectangleShape2D_fjbop")

[node name="PromptLabel" type="Label" parent="."]
visible = false
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("8_yduc3")
theme_override_font_sizes/font_size = 14
text = "Mystery Box: $950"
horizontal_alignment = 1

[node name="Success" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8y8ls")

[node name="Failed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hb6ta")
